# thai-nlem-api

./: .gitignore  .sqlxrc  Cargo.toml  Dockerfile  README.md
.sqlx/: query-34f36d646148ad65a0982ef42a07ca53e196b683728b0a979427dfb6a0b1e272.json  query-3cc351869d86cdfeba64bd5e53495f9538b88f2693ca095cfae2738651a26734.json  query-5f0177f89a083815bdbd2aa463ec2d9c12bf0e17c1c3082741135809cde5f64a.json  query-99c45800b4ccb66a84b89f248c79c589b4447e83f38b49e97f08041301654e00.json  query-b9581afcb7a3205b3168ccf252afb7a19bfca511c881f655e25b1874ccc2e6ea.json  query-df4723b70b847b55441e67a37f6f8c6d914f29ef122f8229b21ab11144280ca4.json  query-e64e4a4b1dfd0621d21b9a713962f9a1d409ea205b0070f040be80c08d3ccbfa.json
data/: nlem_2567.csv
migrations/: 20250906114649_create_initial_tables.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  seeder.rs
